fix bug #117220:

Don't try to commit absolute pathnames. This seems to cause problems for
some cvs servers.

BUG:117220


svn path=/branches/KDE/3.5/kdesdk/cervisia/; revision=484207